[package]

name = "cld2"
version = "0.0.9"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Detect natural language used in text using the cld2 library"
license = "Unlicense"

documentation = "http://emk.github.io/rust-cld2/cld2/index.html"
repository = "https://github.com/emk/rust-cld2"
readme = "README.md"
keywords = ["text"]

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks if we want them.
unstable = []

[dependencies.cld2-sys]
path = "cld2-sys"
version = "*"
