[package]

name = "cld2"
version = "1.0.2"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Detect natural language used in text using the cld2 library"
license = "Unlicense"

documentation = "https://docs.rs/cld2"
repository = "https://github.com/emk/rust-cld2"
readme = "README.md"
keywords = ["text"]

[badges]
maintenance = { status = "deprecated" }

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks if we want them.
unstable = []

[dependencies]
cld2-sys = { version = "1.0.2", path = "cld2-sys" }
lazy_static = "0.1.15"
libc = "0.2.2"

[workspace]
members = ["cld2-sys"]
